--- a/.github/workflows/application1.yml
+++ b/.github/workflows/application1.yml
@@ -2,6 +2,8 @@ name: Application1
 
 on:
     push:
+        branches:
+            - main
     pull_request:
         branches:
             - main
