--- a/.github/workflows/application2.yml
+++ b/.github/workflows/application2.yml
@@ -9,7 +9,8 @@ on:
     pull_request:
         branches:
             - main
-        
+        paths:
+            - 'Application2/**'
 
 jobs:
     build:
