--- a/.github/workflows/application1.yml
+++ b/.github/workflows/application1.yml
@@ -63,76 +63,86 @@ jobs:
     job1:
       runs-on: ubuntu-latest
       # Map a step output to a job output
-      outputs:
-        output1: ${{ steps.filter.outputs.frontend }}
-        output2: ${{ steps.filter.outputs.pipeline }}
+      # outputs:
+      #   output1: ${{ steps.filter.outputs.frontend }}
+      #   output2: ${{ steps.filter.outputs.pipeline }}
         # output3: ${{ steps.step1.outputs.back_end }}
       steps:
-        - name: Checkout
-          uses: actions/checkout@v3.5.3
+            - name: test
+              run: |
+                {
+                  echo "### :rocket: Workflow inputs"
+                  echo "| Arg                 | Value |"
+                  echo "| ------------------- | ----- |"
+                  echo "| Print inputs        | ${{ inputs.print-inputs }} |"
+                  echo "| Environment         | ${{ inputs.environment }} |"
+                  echo "| Cluster             | ${{ inputs.cluster }} |"
+                } >> $GITHUB_STEP_SUMMARY
+    #     - name: Checkout
+    #       uses: actions/checkout@v3.5.3
 
-        - uses: dorny/paths-filter@v2
-          id: filter
-          with:
-            base: ${{ github.ref_name }}
-            filters: |
-              frontend:
-                - 'Application1/**'
-              pipeline:
-                - '.github/**'
-        # - name: Git Clone Action
-        #   uses: sudosubin/git-clone-action@v1.0.1
-        # - run: |
-        #     ls -lrt
-        # - id: step1
-        #   run: |
-        #     changedFiles_App1=$(git diff-tree --no-commit-id --name-only -r $GITHUB_SHA)
-        #     changedFiles_pipeline=$(git diff-tree --no-commit-id --name-only -r $GITHUB_WORKFLOW_SHA)
+    #     - uses: dorny/paths-filter@v2
+    #       id: filter
+    #       with:
+    #         base: ${{ github.ref_name }}
+    #         filters: |
+    #           frontend:
+    #             - 'Application1/**'
+    #           pipeline:
+    #             - '.github/**'
+    #     # - name: Git Clone Action
+    #     #   uses: sudosubin/git-clone-action@v1.0.1
+    #     # - run: |
+    #     #     ls -lrt
+    #     # - id: step1
+    #     #   run: |
+    #     #     changedFiles_App1=$(git diff-tree --no-commit-id --name-only -r $GITHUB_SHA)
+    #     #     changedFiles_pipeline=$(git diff-tree --no-commit-id --name-only -r $GITHUB_WORKFLOW_SHA)
 
-        #     if [[ $changedFiles_App1 == *"Application1"* ]]; then
-        #       echo "front_end=true" >> "$GITHUB_OUTPUT"
-        #     # elif [[ $changedFiles_App1 == *".github"* ]]; then
-        #       # echo "pipeline=true" >> "$GITHUB_OUTPUT"
-        #     else
-        #       echo "back_end=true" >> "$GITHUB_OUTPUT"
-        #     fi
+    #     #     if [[ $changedFiles_App1 == *"Application1"* ]]; then
+    #     #       echo "front_end=true" >> "$GITHUB_OUTPUT"
+    #     #     # elif [[ $changedFiles_App1 == *".github"* ]]; then
+    #     #       # echo "pipeline=true" >> "$GITHUB_OUTPUT"
+    #     #     else
+    #     #       echo "back_end=true" >> "$GITHUB_OUTPUT"
+    #     #     fi
 
-            # latestcommit=$(git log -n 1 --pretty=format:%s -- .github/)
-            # if [ -n "$latestcommit" ]; then
-            #   echo "front_end=true" >> "$GITHUB_OUTPUT"
-            # else
-            #   echo "front_end=false" >> "$GITHUB_OUTPUT"
-            # fi
-            # lastcommitmsg=$(git rev-parse HEAD)
-            # if git ls-tree -r $lastcommitmsg -- .github/ | grep -q ".github"; then
-            #   echo "front_end=true" >> "$GITHUB_OUTPUT"
-            # else
-            #   echo "front_end=false" >> "$GITHUB_OUTPUT"
-            # fi
-          # run: |
-          #   modified_fies=$(git diff --name-only HEAD)
-          #   echo "$modified_fies" | grep -qE '^\.github/' && echo "front_end=true" >> "$GITHUB_OUTPUT" || echo "front_end=false" >> "$GITHUB_OUTPUT"
-        # - id: step2
-        #   run: git ls-tree -r $(git rev-parse HEAD) -- .github/ | grep -q ".github"
-    job2:
-      if: needs.job1.outputs.output1 == 'true' 
-      runs-on: ubuntu-latest
-      needs: job1
-      steps:
-        - env:
-            OUTPUT1: ${{needs.job1.outputs.output1}}
-          run: echo "Hello from FE"
-    job3:
-      if: needs.job1.outputs.output2 == 'true' 
-      runs-on: ubuntu-latest
-      needs: job1
-      steps:
-        - run: echo "Helloo from pipeline"
+    #         # latestcommit=$(git log -n 1 --pretty=format:%s -- .github/)
+    #         # if [ -n "$latestcommit" ]; then
+    #         #   echo "front_end=true" >> "$GITHUB_OUTPUT"
+    #         # else
+    #         #   echo "front_end=false" >> "$GITHUB_OUTPUT"
+    #         # fi
+    #         # lastcommitmsg=$(git rev-parse HEAD)
+    #         # if git ls-tree -r $lastcommitmsg -- .github/ | grep -q ".github"; then
+    #         #   echo "front_end=true" >> "$GITHUB_OUTPUT"
+    #         # else
+    #         #   echo "front_end=false" >> "$GITHUB_OUTPUT"
+    #         # fi
+    #       # run: |
+    #       #   modified_fies=$(git diff --name-only HEAD)
+    #       #   echo "$modified_fies" | grep -qE '^\.github/' && echo "front_end=true" >> "$GITHUB_OUTPUT" || echo "front_end=false" >> "$GITHUB_OUTPUT"
+    #     # - id: step2
+    #     #   run: git ls-tree -r $(git rev-parse HEAD) -- .github/ | grep -q ".github"
+    # job2:
+    #   if: needs.job1.outputs.output1 == 'true' 
+    #   runs-on: ubuntu-latest
+    #   needs: job1
+    #   steps:
+    #     - env:
+    #         OUTPUT1: ${{needs.job1.outputs.output1}}
+    #       run: echo "Hello from FE"
+    # job3:
+    #   if: needs.job1.outputs.output2 == 'true' 
+    #   runs-on: ubuntu-latest
+    #   needs: job1
+    #   steps:
+    #     - run: echo "Helloo from pipeline"
         
-    job4:
-      if: needs.job1.outputs.output2 == 'true' 
-      runs-on: ubuntu-latest
-      needs: job1
-      steps:
-        - run: echo ${{needs.job1.outputs.output1}}
+    # job4:
+    #   if: needs.job1.outputs.output2 == 'true' 
+    #   runs-on: ubuntu-latest
+    #   needs: job1
+    #   steps:
+    #     - run: echo ${{needs.job1.outputs.output1}}
         
