--- a/.github/workflows/application1.yml
+++ b/.github/workflows/application1.yml
@@ -61,7 +61,7 @@ jobs:
     #             ls
     #             pwd
     job1:
-      runs-on: ubuntu-latest
+      runs-on: windows-latest
       # Map a step output to a job output
       # outputs:
       #   output1: ${{ steps.filter.outputs.frontend }}
