--- a/.github/workflows/application1.yml
+++ b/.github/workflows/application1.yml
@@ -69,15 +69,16 @@ jobs:
         # output3: ${{ steps.step1.outputs.back_end }}
       steps:
             - name: test
-              run: |
-                {
-                  echo "### :rocket: Workflow inputs"
-                  echo "| Arg                 | Value |"
-                  echo "| ------------------- | ----- |"
-                  echo "| Print inputs        | ${{ inputs.print-inputs }} |"
-                  echo "| Environment         | ${{ inputs.environment }} |"
-                  echo "| Cluster             | ${{ inputs.cluster }} |"
-                } >> $GITHUB_STEP_SUMMARY
+              run: $GITHUB_STEP_SUMMARY = echo "### Hello world! :rocket:"
+              # run: |
+              #   {
+              #     echo "### :rocket: Workflow inputs"
+              #     echo "| Arg                 | Value |"
+              #     echo "| ------------------- | ----- |"
+              #     echo "| Print inputs        | ${{ inputs.print-inputs }} |"
+              #     echo "| Environment         | ${{ inputs.environment }} |"
+              #     echo "| Cluster             | ${{ inputs.cluster }} |"
+              #   } >> $GITHUB_STEP_SUMMARY
     #     - name: Checkout
     #       uses: actions/checkout@v3.5.3
 
