--- a/.github/workflows/application1.yml
+++ b/.github/workflows/application1.yml
@@ -68,11 +68,14 @@ jobs:
       #   output2: ${{ steps.filter.outputs.pipeline }}
         # output3: ${{ steps.step1.outputs.back_end }}
       steps:
+            - name: Checkout
+              uses: actions/checkout@v3.5.3
             - name: test
               run: |
-                echo '### Hello world! ' >> $GITHUB_STEP_SUMMARY
-                cat $GITHUB_STEP_SUMMARY 
+                # echo '### Hello world! ' >> $GITHUB_STEP_SUMMARY
+                cat test.txt >> $GITHUB_STEP_SUMMARY 
               shell: bash
+              working-directory: Application1
               # run: |
               #   {
               #     echo "### :rocket: Workflow inputs"
@@ -82,8 +85,7 @@ jobs:
               #     echo "| Environment         | ${{ inputs.environment }} |"
               #     echo "| Cluster             | ${{ inputs.cluster }} |"
               #   } >> $GITHUB_STEP_SUMMARY
-    #     - name: Checkout
-    #       uses: actions/checkout@v3.5.3
+
 
     #     - uses: dorny/paths-filter@v2
     #       id: filter
