--- a/.github/workflows/application1.yml
+++ b/.github/workflows/application1.yml
@@ -73,8 +73,8 @@ jobs:
             - name: test
               run: |
                 # echo '### Hello world! ' >> $GITHUB_STEP_SUMMARY
-                # cat test.txt >> $GITHUB_STEP_SUMMARY 
-                echo "### Hello world! :rocket:" = $GITHUB_STEP_SUMMARY
+                # cat test.txt >> $GITHUB_STEP_SUMMARY
+                $GITHUB_STEP_SUMMARY="Hello"
               # shell: bash
               working-directory: Application1
               # run: |
